--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,7 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
+node_modules/
 
 # Visual Studio 6 build log
 *.plg
@@ -229,3 +230,7 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+# Local History for Visual Studio
+.localhistory/
+ExtracurricularActivitiesManagement/appsettings.json
