--- a/appsettings.json
+++ b/appsettings.json
@@ -3,12 +3,17 @@
     "DefaultConnection": "Server=localhost;Database=ExtracurricularActivitiesManagement;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
+  "Jwt": {
+    "Site": "https://localhost:5001",
+    "SigningKey": "signing-key-stop-throwing-errors",
+    "ExpiryInMinutes": "720"
+  },
   "IdentityServer": {
     "Clients": {
       "ExtracurricularActivitiesManagement": {
@@ -16,5 +21,5 @@
       }
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
